--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,6 +4,12 @@ templateClass: tmpl-post
 ---
 <h1>{{ title }}</h1>
 
+{%- if mainImage %}
+<article>
+<img src="{{mainImage}}" height="350" />
+</article>
+{%- endif %}
+
 <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
 {%- for tag in tags | filterTagList -%}
 {%- set tagUrl %}/tags/{{ tag | slug }}/{% endset -%}
