--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,7 +6,7 @@ templateClass: tmpl-post
 
 {%- if mainImage %}
 <article>
-<img src="{{mainImage}}" height="350" />
+<img class="post__main-image" src="{{mainImage}}" />
 </article>
 {%- endif %}
 
@@ -16,7 +16,9 @@ templateClass: tmpl-post
 <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
 {%- endfor %}
 
+<div class="post">
 {{ content | safe }}
+</div>
 
 {%- if collections.posts %}
 {%- set nextPost = collections.posts | getNextCollectionItem(page) %}
